# ems-line-controller-dlr-pcb

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  pyproject.toml  readme.md  system_adrs.md  theory.ipynb
cad/: dlr_carrier-anemometer.kicad_sch  dlr_carrier-cellular.kicad_sch  dlr_carrier-connectors.kicad_sch  dlr_carrier-power.kicad_sch  dlr_carrier-sensors.kicad_sch  dlr_carrier-som.kicad_sch  dlr_carrier.kicad_pcb  dlr_carrier.kicad_pro  dlr_carrier.kicad_sch  dlr_carrier.net  layout_spec.yaml  pcb_placement.yaml
cad/assembly/: build_assembly.py  extract_placement.py  pcb_assembly.json
cad/drawing/: place_pcb.py
cad/lepton_daughter/: lepton_daughter.kicad_pro  lepton_daughter.kicad_sch  lepton_daughter.net
cad/netlist/: anemometer.py  cellular.py  connectors.py  lepton_daughter.py  model.py  power.py  sensors.py  som.py
cad/schematic/: multi_sheet.py  schematic.py
docs/superpowers/specs/: 2026-05-10-flir-mounting-design.md
output/: dlr_carrier_pcb.step
output/fab/: bom.csv  cpl.csv
output/gerbers/: dlr_carrier-B_Adhesive.gba  dlr_carrier-B_Cu.gbl  dlr_carrier-B_Fab.gbr  dlr_carrier-B_Mask.gbs  dlr_carrier-B_Paste.gbp  dlr_carrier-B_Silkscreen.gbo  dlr_carrier-Edge_Cuts.gm1  dlr_carrier-F_Adhesive.gta  dlr_carrier-F_Courtyard.gbr  dlr_carrier-F_Cu.gtl  dlr_carrier-F_Fab.gbr  dlr_carrier-F_Mask.gts  dlr_carrier-F_Paste.gtp  dlr_carrier-F_Silkscreen.gto  dlr_carrier-User_1.gbr  dlr_carrier-User_4.gbr  dlr_carrier-User_Comments.gbr  dlr_carrier-User_Drawings.gbr  dlr_carrier-User_Eco1.gbr  dlr_carrier-User_Eco2.gbr  dlr_carrier-job.gbrjob  dlr_carrier.drl
sim/: constants.py  model.py  test_run.py
